--- a/manifest.json
+++ b/manifest.json
@@ -7,7 +7,8 @@
       "webRequest",
       "tabs",
       "storage",
-	  "notifications"
+      "notifications",
+      "contextMenus"
     ],
     "host_permissions": ["<all_urls>"],
     "background": {
@@ -15,7 +16,13 @@
     },
     "action": {
       "default_title": "Ad Mute Controller",
-	  "default_icon": "on.png"
+      "default_icon": "on.png",
+      "web_accessible_resources": [
+        {
+          "resources": ["history.html"],
+          "matches": ["<all_urls>"]
+        }
+      ]
     }
   }
   
